[tool.poetry]
name = "botfinally"
version = "0.1.0"
description = ""
authors = ["Voina-Nikolay <nikolajvojna53@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telebot = "^0.0.5"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
